bk_ida/gobmkida/c2/set_depth_values
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/set_depth_values/src/engine/utils.c:1078:14: error: use of undeclared identifier 'invalid_operation'
if ( !( v6 ^ __OFSUB__( v3, 5) | ( v3 == 5)) ) 
             ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/set_depth_values/src/engine/utils.c:856:25: note: expanded from macro '__OFSUB__'
#define __OFSUB__(x, y) invalid_operation // Generate overflow flag for (x-y)
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/set_depth_values/src/engine/utils.c:1152:10: error: use of undeclared identifier 'set_depth_values_node_limits'
if ( 2 * set_depth_values_node_limits[10 - level] > 19 ) 
         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/set_depth_values/src/engine/utils.c:1153:11: error: use of undeclared identifier 'set_depth_values_node_limits'
v17 = 2 * set_depth_values_node_limits[10 - level]; 
          ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/set_depth_values/src/obj/1/utils.o] Error 1
